# campbadge2023

./: README.md
Bash/: README.md  badge.sh
CPP/: README.md
CPP/Advanced/: platformio.ini
CPP/Advanced/src/: animation.h  json_post_handler.html  main.cpp  main.h  matrix.h
CPP/Simple/: Readme.md  platformio.ini
CPP/Simple/src/: main.cpp
Hardware/: README.md
Hardware/Export/: 3D_PCB1_2023-07-11.mtl
Hardware/Production/: BOM_Board1_PCB1_2023-07-11.xlsx  PickAndPlace_PCB1_2023-07-11.xlsx
MicroPython/: README.md
MicroPython/Clock/: main.py
MicroPython/Simple/: main.py
MicroPython/Text/: colorsys.py  main.py  marquee.py
MicroPython/Text/symbols/: angry.xbm  arrow_e.xbm  arrow_n.xbm  arrow_ne.xbm  arrow_nw.xbm  arrow_s.xbm  arrow_se.xbm  arrow_sw.xbm  arrow_w.xbm  asleep.xbm  butterfly.xbm  chessboard.xbm  clock1.xbm  clock10.xbm  clock11.xbm  clock12.xbm  clock2.xbm  clock3.xbm  clock4.xbm  clock5.xbm  clock6.xbm  clock7.xbm  clock8.xbm  clock9.xbm  confused.xbm  cow.xbm  diamond.xbm  diamond_small.xbm  duck.xbm  fabulous.xbm  ghost.xbm  giraffe.xbm  happy.xbm  heart.xbm  heart_small.xbm  house.xbm  letter_100.xbm  letter_101.xbm  letter_103.xbm  letter_105.xbm  (+101 more)
Rust/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
Rust/.cargo/: config.toml
Rust/Advanced/: .gitignore  Cargo.toml  cfg.toml
Rust/Advanced/src/: json_post_handler.html  led_matrix.rs  main.rs  rgb2hsv.rs
Rust/Simple/: Cargo.toml
Rust/Simple/src/: led_matrix.rs  main.rs  rgb2hsv.rs
Rust/crates/lux-camp-badge/: Cargo.toml
Rust/crates/lux-camp-badge-animations/: Cargo.toml
Rust/crates/lux-camp-badge-animations/src/: gol.rs  lib.rs  noise.rs  noise_animation.rs  rainbow.rs  random.rs  scene.rs  static_scene.rs
Rust/crates/lux-camp-badge/src/: lib.rs  wifi.rs
Rust/crates/lux-camp-badge/src/led/: hsv_rgb_convert.rs  matrix.rs  mod.rs
Rust/examples/Advanced/: .gitignore  Cargo.toml  Readme.md  build.rs
Rust/examples/Advanced/src/: json_post_handler.html  main.rs
Rust/examples/Simple/: Cargo.toml  Readme.md
Rust/examples/Simple/src/: main.rs
