[package]
name = "advanced"
version = "0.1.0"
authors = ["Raphael Theiler <peanut@esheep.ch>"]
edition = "2021"
rust-version = "1.66"

[features]
default = ["std", "hal", "esp-idf-sys/native","smart-leds-trait", "embedded-graphics-core"]

pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
anyhow = "1"
log = { version = "0.4.19", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }
rgb = "0.8"
toml-cfg = "=0.1.3"
smart-leds-trait = { version = "0.2", optional = true }
embedded-graphics-core = { version = "0.4", optional = true }
ws2812-esp32-rmt-driver = "*"
url = "2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = "0.4.3"

lux-camp-badge = { path = "../../crates/lux-camp-badge" }
lux-camp-badge-animations = { path = "../../crates/lux-camp-badge-animations" }

[build-dependencies]
embuild = "0.31.2"

[dev-dependencies]
toml-cfg = "=0.1.3"
